fix scrollbar in middle of screen on home page

--- a/src/components/NotesList/style.css
+++ b/src/components/NotesList/style.css
@@ -14,29 +14,7 @@
 
   padding: 0 2rem;
 
-  overflow-y: scroll;
-  scrollbar-color: hsl(0, 0%, 90%) transparent;
-  scrollbar-width: thin;
-}
-
-.dark-mode .NotesList__Grid {
-  scrollbar-color: hsl(0, 0%, 20%) transparent;
-}
-
-.NotesList__Grid::-webkit-scrollbar {
-  width: 6px;
-}
-
-.NotesList__Grid::-webkit-scrollbar-thumb {
-  background-color: hsl(0, 0%, 90%);
-}
-
-.dark-mode .NotesList__Grid::-webkit-scrollbar-thumb {
-  background-color: hsl(0, 0%, 20%);
-}
-
-.NotesList__Grid::-webkit-scrollbar-track {
-  box-shadow: none;
+  overflow: visible;
 }
 
 .NotesList__note {
